--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ crash.*.log
 # to change depending on the environment.
 *.tfvars
 *.tfvars.json
+*.terraform.lock.hcl
 
 # Ignore override files as they are usually used to override resources locally and so
 # are not checked in
@@ -35,3 +36,6 @@ terraform.rc
 
 # Visual Studio Code
 .history/*
+
+# Generated file
+new.tf
